--- a/app/index.html
+++ b/app/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html>
 <mete charset ="UTF-8">
-<head>
-	<title></title>
-<link href="style.css" type="text/css" rel="stylesheet">
-<header> List of Available Andelans Rooms</header><br>
-</head>
-<body>
-<form>
-		<label for="Username"> Please select from the option :</label><br>
-		<select><
-		<p><option value="meeting">Meeting Room</option></p>
-		<option value="games">Games Room</option>
-		<option value="quite-rm">Quite Room</option>
-		<option value="Learning">Learning Room</option>
-		<option value="working">Working Room</option> 
-		</select>
-		<label>Yes</label><input type="radio" name="onOff">
-		<label>No</label><input type="radio" name="onOff">
-		<p><input type="submit" value="submit"></p>
-		<table>
-			<thead>
-				<th>Names</th>
-				<th>Types of rooms</th>
-				<th>Availability</th>
-			</thead>
-			<tbody id="rooms-available"></tbody>
-		</table>
-</form>
+	<head>
+		<title></title>
+		<header> List of Available Andelans Rooms</header>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+		<script type="scripts/getRooms.js"></script>
+		<script type="scripts/main.js"></script>
+	</head>
+	<body>
+		<form>
+				<label> Please select from the option :</label>
+				<br>
+				<select id="choose-room-type">
+					<option value="meeting">Meeting Room</option>
+					<option value="games">Games Room</option>
+					<option value="quite-rm">Quite Room</option>
+					<option value="learning">Learning Room</option>
+					<option value="working">Working Room</option> 
+				</select>
+				<br>
+				<table>
+					<thead>
+						<th>Names</th>
+						<th>Types of rooms</th>
+						<th>Availability</th>
+					</thead>
+					<tbody id="rooms-available"></tbody>
+				</table>
+		</form>
 
 
-</body>
+	</body>
 </html>
