--- a/app/index.html
+++ b/app/index.html
@@ -3,21 +3,20 @@
 <mete charset ="UTF-8">
 <head>
 	<title></title>
-<link href="style.css" type="text/css" rel="stylesheet">
+<link href="styles/style.css" type="text/css" rel="stylesheet">
 <header> List of Available Andelans Rooms</header><br>
 </head>
 <body>
 <form>
 		<label for="Username"> Please select from the option :</label><br>
-		<select><
+		<select>
 		<p><option value="meeting">Meeting Room</option></p>
 		<option value="games">Games Room</option>
 		<option value="quite-rm">Quite Room</option>
 		<option value="Learning">Learning Room</option>
 		<option value="working">Working Room</option> 
 		</select>
-		<label>Yes</label><input type="radio" name="onOff">
-		<label>No</label><input type="radio" name="onOff">
+
 		<p><input type="submit" value="submit"></p>
 		<table>
 			<thead>
@@ -28,7 +27,9 @@
 			<tbody id="rooms-available"></tbody>
 		</table>
 </form>
-
+<div >
+	<img src = "rooms.jpg">
+</div>
 
 </body>
 </html>
