--- a/app/index.html
+++ b/app/index.html
@@ -3,14 +3,17 @@
 <mete charset ="UTF-8">
 	<head>
 		<title></title>
-		<header> List of Available Andelans Rooms</header>
+		<link rel="stylesheet" type="text/css" href="styles/styles.css">
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src="scripts/getRooms.js"></script>
 		<script src="scripts/main.js"></script>
 	</head>
 	<body>
+		<h2> List of Available Andelans Rooms</h2>
 		<form>
 				<label> Please select from the option :</label>
+				<br>
 				<br>
 				<select id="choose-room-type">
 					<option value="default">Choose a Room Type</option>
@@ -21,14 +24,23 @@
 					<option value="working">Working Room</option> 
 				</select>
 				<br>
-				<table>
-					<thead>
-						<th>Names</th>
-						<th>Types of rooms</th>
-						<th>Availability</th>
-					</thead>
-					<tbody id="rooms-available"></tbody>
-				</table>
+				<br>
+				<br>
+				<div class="row">
+					<div class="col-md-2"></div>
+					<div class="center-block col-md-8">
+						<table class="table table-striped table-bordered">
+							<thead>
+								<th class="text-center">Names</th>
+								<th class="text-center">Types of rooms</th>
+								<th class="text-center">Availability</th>
+							</thead>
+							<tbody id="rooms-available"></tbody>
+						</table>
+					</div>
+					<div class="col-md-2"></div>
+				</div>
+				
 		</form>
 
 
