add andela's logo

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 		<script src="scripts/main.js"></script>
 	</head>
 	<body>
+		<img src="images/Andela-logo-landscape-blue-400px-22.png">
 		<h2> List of Available Andelans Rooms</h2>
 		<form>
 				<label> Please select from the option :</label>
