--- a/app/index.html
+++ b/app/index.html
@@ -11,13 +11,13 @@
 	</head>
 	<body>
 		<img src="images/Andela-logo-landscape-blue-400px-22.png">
-		<h2> List of Available Andelans Rooms</h2>
+		<h2> List of Available Andela Rooms</h2>
 		<form>
 				<label> Please select from the option :</label>
 				<br>
 				<br>
 				<select id="choose-room-type">
-					<option value="default">Choose a Room Type</option>
+					<option value="default">Please choose a Room Type</option>
 					<option value="meetings">Meeting Room</option>
 					<option value="games">Games Room</option>
 					<option value="quiet-time">Quiet Room</option>
@@ -32,8 +32,8 @@
 					<div class="center-block col-md-8">
 						<table class="table table-striped table-bordered">
 							<thead>
-								<th class="text-center">Names</th>
-								<th class="text-center">Types of rooms</th>
+								<th class="text-center">Name</th>
+								<th class="text-center">Type of room</th>
 								<th class="text-center">Availability</th>
 							</thead>
 							<tbody id="rooms-available"></tbody>
