--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 				<div class="row">
 					<div class="col-md-2"></div>
 					<div class="center-block col-md-8">
-						<table class="table table-striped table-bordered">
+						<table id="rooms-table" class="table table-striped table-bordered">
 							<thead>
 								<th class="text-center">Name</th>
 								<th class="text-center">Type of room</th>
