--- a/app/index.html
+++ b/app/index.html
@@ -13,11 +13,11 @@
 		<img src="images/Andela-logo-landscape-blue-400px-22.png">
 		<h2> List of Available Andela Rooms</h2>
 		<form>
-				<label> Please select from the option :</label>
+				<label> Please select from the option:</label>
 				<br>
 				<br>
 				<select id="choose-room-type">
-					<option value="default">Please choose a Room Type</option>
+					<option value="default">Please choose a room type</option>
 					<option value="meetings">Meeting Room</option>
 					<option value="games">Games Room</option>
 					<option value="quiet-time">Quiet Room</option>
